# rules_playwright

./: .bazelignore  .gitignore  BUILD.bazel  DESIGN.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extensions.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repositories.bzl
.github/workflows/: ci.yml
examples/basic/: BUILD.bazel  playwright.config.ts  smoke.spec.ts
examples/itest/: BUILD.bazel  fake_app.sh  playwright.config.ts  ui.spec.ts
examples/kind/: BUILD.bazel  app.yaml  deploy_app.sh  deploy_health.sh  e2e.spec.ts  playwright.config.ts
private/: BUILD.bazel  binary.sh.tmpl  bundle_assembly.bzl  health_check.sh.tmpl  launcher.py  launcher.sh.tmpl  playwright_binary.bzl  playwright_health_check.bzl  playwright_server.bzl  playwright_test.bzl  providers.bzl  repositories.bzl  server.sh.tmpl  versions.bzl
tests/: BUILD.bazel  analysis_tests.bzl  binary_runtime_test.sh  playwright.config.ts  server_runtime_test.sh  smoke.spec.ts  version_drift_test.py
toolchain/: BUILD.bazel  toolchain.bzl
tools/: update_checksums.py  update_checksums.sh
